--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,3 @@
-
 {
   "hosting": {
     "source": ".",
@@ -10,5 +9,9 @@
     "frameworksBackend": {
       "region": "us-central1"
     }
+  },
+  "functions": {
+    "source": "functions",
+    "runtime": "nodejs18"
   }
 }
